# sentiment_analysis

./: .env_sample  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: check_pr  check_pr.yaml
python_scripts/: model_analysis.py  test.py
sample_data/raw/aclImdb/test/neg/: 1_3.txt
sample_data/raw/aclImdb/test/pos/: 0_10.txt  1_10.txt
sample_data/train_test/: test.json  train.json
sentiment_analysis/: model_analysis.py  sentiment_analysis.py  test.py  tf_gradient_tape_example.py
sentiment_analysis/scripts/: get_train_test_data.py  predict_and_evaluate.py  train.py
